# easytest

./: .gitignore  .travis.yml  CHANGES.md  README.md  easytest.cabal  nix_stack.nix  shell.nix  stack.yaml
src/: EasyTest.hs
src/EasyTest/: Core.hs  Diff.hs  Generators.hs  Hedgehog.hs  Internal.hs  Porcelain.hs  Prism.hs
src/EasyTest/Internal/: Hedgehog.hs
tests/: Suite.hs
